# agentic-clustering

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: critic.md  investigator.md  proposer.md
benchmarking/: __init__.py  dataset_lens.py  paths.py  secrets.py
benchmarking/baselines/: agentic_ablations.py  agentic_clustering.py  bertopic.py  kmeans.py  lda.py
benchmarking/baselines/clusterllm/: __init__.py  _run_vendored.py  dataset_adapter.py  finetune.py  instructor_prompts.json  orchestrate.py  prompts.json  triplet_judge.py
benchmarking/baselines/clusterllm/_vendored/: CHANGES.md
benchmarking/baselines/clusterllm/_vendored/perspective/2_finetune/: convert_triplet.py
benchmarking/baselines/clusterllm/_vendored/perspective/2_finetune/InstructorEmbedding/: instructor.py
benchmarking/baselines/clusterllm/_vendored/perspective/2_finetune/clustering_utils/: evaluator.py
benchmarking/baselines/huang_he/: CHANGES.md  __init__.py  _batch_common.py  batch_classify.py  batch_generate.py  dataset_adapter.py  merge.py  orchestrate.py  prompts.py  result_parser.py
benchmarking/baselines/huang_he/_vendored/: UPSTREAM.md  given_label_classification.py  label_generation.py  run.sh  select_part_labels.py
benchmarking/baselines/topicgpt/: CHANGES.md  __init__.py  batch_assigner.py  batch_correct.py  dataset_adapter.py  orchestrate.py  result_parser.py
benchmarking/baselines/topicgpt/_vendored/topicgpt_python/: __init__.py  assignment.py  correction.py  data_sample.py  generation_1.py  refinement.py  utils.py
benchmarking/data_processing/: README.md  banking77.py  base.py  build_ablation_table.py  build_results_table.py  build_summary_table.py  clinc150.py  goemotions.py  load.py  massive_domain.py  massive_intent.py  process_all.py  stackexchange.py  twenty_newsgroups.py
benchmarking/embeddings/: __init__.py  openai_embeddings.py  sbert.py
benchmarking/evaluation/: cost.py  metrics.py  persistence.py
benchmarking/experiments/: run_ablations.py  run_agentic_clustering.py  run_bertopic.py  run_clusterllm.py  run_huang_he.py  run_lda.py  run_openai_embedding_kmeans.py  run_sbert_kmeans.py  run_topicgpt.py
benchmarking/llm_clients/: __init__.py  claude_code.py
hooks/: hooks.json
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: auditor.md  critic.md  investigator.md  proposer.md  synthesizer.md
plugin/hooks/: hooks.json
plugin/skills/cluster-classify/: SKILL.md
plugin/skills/cluster-finalize/: SKILL.md
plugin/skills/cluster-investigate/: SKILL.md
plugin/skills/cluster-label/: SKILL.md
plugin/skills/cluster-report-issue/: SKILL.md
plugin/skills/cluster-run/: SKILL.md
plugin/skills/cluster-status/: SKILL.md
plugin/skills/cluster-tune/: SKILL.md
plugin/skills/corpus-tools/: SKILL.md
plugin/skills/corpus-tools/scripts/: _audit_metrics.py  _log.py  _summary.py  _taxonomy.py  _workspace.py  build_classification_prompt.py  classify.py  confusion.py  evaluate_prompt.py  init.py  labels_to_corpus.py  metrics.py  report_issue.py  sample.py  search.py  state.py  validate.py
skills/cluster-classify/: SKILL.md
skills/cluster-investigate/: SKILL.md
skills/cluster-label/: SKILL.md
skills/cluster-run/: SKILL.md
skills/cluster-tune/: SKILL.md
skills/corpus-tools/: SKILL.md
skills/corpus-tools/scripts/: build_classification_prompt.py  classify.py  init.py  sample.py  search.py  validate.py
slurm/: README.md  array_task.py  prewarm.sh  run_clusterllm_cluster.sbatch  run_clusterllm_finetune.sbatch  run_clusterllm_prep.sbatch  setup_env.sh  submit_all.sh  submit_calibration.sh  submit_cluster.sh  submit_finetune.sh
