[project]
name = "agentic-clustering-benchmarking"
version = "0.1.0"
description = "Benchmark experiments for the agentic-clustering Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Emily Silcock", email = "emilysilcock@gmail.com" },
    { name = "Simon Löwe", email = "loewe.sim@gmail.com" },
]
dependencies = [
    "datasets>=2.18",
    "scikit-learn>=1.4",
    "truststore>=0.10 ; sys_platform == 'win32'",
    "gdown>=5.2",
    # Sentence-transformers pinned to the 2.x line. The vendored Instructor
    # encoder (zhang-yu-wei/ClusterLLM 2023) relies on the legacy encode/
    # tokenize API that accepted list-of-list inputs ([prompt, text, 0]) and
    # on the internal ``_text_length`` method. ST 5.x rewrote both via the
    # InputFormatter/Modality infrastructure and renamed ``_text_length`` to
    # ``_input_length``. Pin until we either upgrade the vendored Instructor
    # to the ST 5.x API or migrate to the official InstructorEmbedding PyPI
    # package for phase 0+4 (phase 3 still needs the vendored compute_loss).
    "sentence-transformers>=2.7,<3.0",
    "bertopic>=0.16",
    "openai>=1.40",
    "tiktoken>=0.7",
    "h5py>=3.10",
    # Torch pinned to a cu128 build. FASRC GPU nodes (driver 575.x) cap at
    # CUDA 12.9, so the default cu13x wheels silently fall back to CPU.
    # cu128 wheels also work on Windows/local with newer drivers (forward
    # compat), so one resolution covers both platforms. See
    # ~/.claude/skills/fasrc/gotchas.md "torch CUDA wheel vs FASRC driver".
    "torch==2.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarking"]
