[project]
name = "agentic-clustering-benchmarking"
version = "0.1.0"
description = "Benchmark experiments for the agentic-clustering Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Emily Silcock", email = "emilysilcock@gmail.com" },
    { name = "Simon Löwe", email = "loewe.sim@gmail.com" },
]
dependencies = [
    "datasets>=2.18",
    "scikit-learn>=1.4",
    "truststore>=0.10 ; sys_platform == 'win32'",
    "gdown>=5.2",
    # Sentence-transformers pinned to 2.2.0 — the exact version the ClusterLLM
    # authors developed against (their requirements.txt says >=2.2.0). The
    # vendored Instructor encoder under
    # benchmarking/baselines/clusterllm/_vendored/ overrides several internal
    # methods (_load_sbert_model, encode) against the ST 2.2.0 contract.
    # Bumping to 2.7+ breaks those overrides via parent-class signature
    # changes; bumping to 5.x breaks them more deeply via the new
    # InputFormatter/Modality pipeline. Pin here keeps the vendored code
    # byte-identical to upstream (apart from non-science fixes documented in
    # _vendored/CHANGES.md).
    "sentence-transformers==2.2.0",
    "bertopic>=0.16",
    "openai>=1.40",
    "tiktoken>=0.7",
    "h5py>=3.10",
    # Torch pinned to a cu128 build. FASRC GPU nodes (driver 575.x) cap at
    # CUDA 12.9, so the default cu13x wheels silently fall back to CPU.
    # cu128 wheels also work on Windows/local with newer drivers (forward
    # compat), so one resolution covers both platforms. See
    # ~/.claude/skills/fasrc/gotchas.md "torch CUDA wheel vs FASRC driver".
    "torch==2.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarking"]
