[project]
name = "agentic-clustering-benchmarking"
version = "0.1.0"
description = "Benchmark experiments for the agentic-clustering Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Emily Silcock", email = "emilysilcock@gmail.com" },
    { name = "Simon Löwe", email = "loewe.sim@gmail.com" },
]
dependencies = [
    "datasets>=2.18",
    "scikit-learn>=1.4",
    "truststore>=0.10 ; sys_platform == 'win32'",
    "gdown>=5.2",
    "sentence-transformers>=5.0",
    "bertopic>=0.16",
    "openai>=1.40",
    "tiktoken>=0.7",
    "h5py>=3.10",
    # ClusterLLM phase 3 (sentence-transformers Trainer) needs accelerate;
    # base sentence-transformers ships without it.
    "accelerate>=0.26",
    # TopicGPT baseline (vendored under benchmarking/baselines/topicgpt/_vendored)
    "anytree>=2.12",
    "anthropic>=0.40",
    # Torch pinned to a cu128 build. FASRC GPU nodes (driver 575.x) cap at
    # CUDA 12.9, so the default cu13x wheels silently fall back to CPU.
    # cu128 wheels also work on Windows/local with newer drivers (forward
    # compat), so one resolution covers both platforms. See
    # ~/.claude/skills/fasrc/gotchas.md "torch CUDA wheel vs FASRC driver".
    "torch==2.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarking"]
